<resources>
    <!-- Constants -->
    <string name="app_name" translatable="false">GPS Tracker &amp; Remote Desktop</string>

    <string name="greeting">Welcome!!!</string>

    <!-- Sign in -->
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_email">Sign in with Email</string>


    <!-- Device connection -->
    <string name="add_device_qr">Add camera</string>

    <string name="google_client_id" translatable="false">13325893309-uoihd848e8dtb17h3fl5bkp1bpol3avr.apps.googleusercontent.com</string>
   <string name="mapbox_api_token" translatable="false">pk.eyJ1IjoidGFsaGFraHdqYTA2IiwiYSI6ImNsZG12N3E30TBK0Xkzem9sMmh5Z3Bkej UifQ.85ngAVHvTUGpXYNEaeEDgo</string>
   
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>


    <string name="menu_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="settings">Settings</string>
    <string name="menu_share">Share data to connect</string>

    <string name="no_camera_found">No camera found</string>


    <!-- Submit / Deny -->
    <string name="submit">Submit</string>
    <string name="deny">Deny</string>

    <!-- Qr -->
    <string name="scan_qr">Scan QR code below</string>
    <string name="qr_was_generated">Qr was generated &gt; 30 minutes ago</string>
    <string name="recreate_qr">Recreate Qr</string>
    <string name="menu_change_name">Change name</string>

    <!-- Guarantee messages-->
    <string name="confirm_message">Are you sure?</string>


    <!-- Success messages -->
    <string name="success">Success</string>


    <!-- Errors zone -->
    <string name="invalid_username_error">Username should exist and be &lt; 20</string>
    <string name="unknown_error">Unknown error detected</string>
    <string name="menu_become_camera">Become camera</string>
    <string name="connect_the_device">Connect the device</string>
    <string name="alredy_connected">Already connected</string>
    <string name="connect_user_not_found">User to be connected with was not found</string>
    <string name="connected_devices">Connected Devices</string>
    <string name="menu_connected_devices">Connected Devices</string>

    <string name="admin_test_account">Admin test account</string>
    <string name="user_test_account">User test account</string>


</resources>