<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".AdminQrFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_black"
        android:gravity="center"
        android:text="@string/scan_qr"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:cardCornerRadius="20dp">
            <ImageView
                android:id="@+id/qrCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

            </ImageView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/qrTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_black"
                android:text="00:00:00"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <RelativeLayout
                android:id="@+id/recreate_qr_form"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/qr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_black"
                android:text="@string/qr_was_generated"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="15sp" />

            <Button
                android:id="@+id/recreate_qr"
                style="@style/CustomBtn"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/qr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/accent_purple"
                android:text="@string/recreate_qr"/>
            </RelativeLayout>


        </LinearLayout>









</androidx.constraintlayout.widget.ConstraintLayout>